--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phaser3-parcel-template",
   "version": "1.0.0",
-  "description": "A typescript template project for Phaser 3 using Parceljs",
+  "description": "A Simple platformer game",
   "scripts": {
     "start": "parcel src/index.html -p 8000",
     "build": "parcel build src/index.html --dist-dir dist",
@@ -13,7 +13,7 @@
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "deploy": "npm run build && aws s3 sync dist/ s3://plataformer --acl public-read"
   },
-  "author": "supertommy",
+  "author": "Robert Vitoriano",
   "license": "MIT",
   "repository": {
     "type": "git",
