--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "A typescript template project for Phaser 3 using Parceljs",
   "scripts": {
-    "start": "parcel src/index.html -p 4000",
-    "build": "parcel build src/index.html --dist-dir dist",
+    "start": "parcel src/index.html -p 7000",
+    "build": "parcel build src/index.html  --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "android": "npm run build && npx cap run android",
     "sync": "npx cap sync",
     "show-logs": "logkitty android 'console.log'",
     "build-android": "ionic capacitor build android",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "deploy": "npm run build && aws s3 sync dist/ s3://plataformer --acl public-read"
+    "deploy": "aws s3 sync dist/ s3://plataformer --acl public-read"
   },
   "author": "supertommy",
   "license": "MIT",
@@ -26,7 +26,6 @@
     "cssnano": "^7.0.3",
     "eslint": "^6.8.0",
     "minimist": ">=1.2.2",
-    "parcel": "^2.12.0",
     "parcel-plugin-clean-easy": "^1.0.2",
     "parcel-plugin-static-files-copy": "^2.4.3",
     "postcss": "^8.4.39",
