allow snowballl shooter to fall

--- a/public/assets/animation/enemy/snow-ball-shooter-animation/snow-ball-shooter-animation.json
+++ b/public/assets/animation/enemy/snow-ball-shooter-animation/snow-ball-shooter-animation.json
@@ -17,7 +17,7 @@
 	"sourceSize": {"w":255,"h":235}
 },
 {
-	"filename": "panda_01_idle_upset.png",
+	"filename": "panda_01_idle_03.png",
 	"frame": {"x":510,"y":0,"w":255,"h":235},
 	"rotated": false,
 	"trimmed": false,
