--- a/package.json
+++ b/package.json
@@ -1,58 +1,21 @@
 {
-  "name": "phaser3-parcel-template",
-  "version": "1.0.0",
-  "description": "A typescript template project for Phaser 3 using Parceljs",
-  "scripts": {
-    "start": "parcel src/index.html -p 7000",
-    "ionic-dev": "ionic capacitor run android --livereload --external",
-    "build": "parcel build src/index.html  --out-dir dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "android": "npx cap run android",
-    "sync": "npx cap sync",
-    "show-logs": "logkitty android 'console.log'",
-    "build-android": "ionic capacitor build android",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "deploy": "aws s3 sync dist/ s3://plataformer --acl public-read",
-    "ionic:serve": "parcel src/index.html",
-    "tauri": "tauri"
-
-  },
-  "author": "supertommy",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ourcade/phaser3-parcel-template.git"
-  },
-  "homepage": "https://github.com/ourcade/phaser3-parcel-template",
-  "devDependencies": {
-    "@capacitor/cli": "6.1.0",
-    "@tauri-apps/cli": "^1.6.0",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "cssnano": "^7.0.3",
-    "eslint": "^6.8.0",
-    "minimist": ">=1.2.2",
-    "parcel-plugin-clean-easy": "^1.0.2",
-    "parcel-plugin-static-files-copy": "^2.4.3",
-    "postcss": "^8.4.39",
-    "typescript": "^3.8.3"
-  },
-  "dependencies": {
-    "@capacitor/android": "^6.1.0",
-    "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.1.0",
-    "@capacitor/haptics": "6.0.0",
-    "@capacitor/keyboard": "6.0.1",
-    "@capacitor/status-bar": "6.0.0",
-    "copyfiles": "^2.4.1",
-    "phaser": "^3.55.2"
-  },
-  "parcelCleanPaths": [
-    "dist"
-  ],
-  "staticFiles": {
-    "staticPath": "public",
-    "watcherGlob": "**",
-    "destinationPath": "./"
-  }
+	"name": "phaser3-typescript-vite-template",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"start": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.40.0",
+		"@typescript-eslint/parser": "^5.40.0",
+		"eslint": "^8.25.0",
+		"typescript": "^4.6.4",
+		"vite": "^3.1.0"
+	},
+	"dependencies": {
+		"phaser": "^3.55.2"
+	}
 }
