--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "phaser3-typescript-vite-template",
+	"name": "penguin-adventure",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
