--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
+		"@types/node": "^22.13.14",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
@@ -31,13 +32,24 @@
 		"vite": "^6.2.0"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^4.1.3",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/postcss": "^4.0.17",
 		"@tailwindcss/vite": "^4.0.17",
+		"axios": "^1.8.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.485.0",
 		"phaser": "^3.55.2",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.55.0",
+		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.17",
+		"tw-animate-css": "^1.2.5",
+		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
 	}
 }
