--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
+		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/postcss": "^4.0.17",
