--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        
+      - name: Build
+        run: npm run build
       - name: Create .env file
         run: |
           echo "VITE_API_URL=${{ vars.VITE_API_URL }}" >> .env
